test/tests/compiler/18_structures/invalid_types/invalid_member_operators/nested_arrow_pointer_to_non_struct.plx
type struc s(    l: i64    )

type struc has_ptr(    ptr: *f64    
    )

pub fn main(none) i32 {
    d: f64 = 0.0
    p_struct: struc has_ptr = $(@d)
    return p_struct.ptr[].l #  can't apply -> operator to pointer to non-struct
}
